# apple-music-tools

./: README.md  pyproject.toml
apple_music_tools/: main.py
apple_music_tools/proxy/: __init__.py  filter_requests.py  models.py  plist_xml_util.py
