[tool.pylint.master]
disable="""
C0103,C0114,C0115,C0116,C0200,C0330,C0326,W0703,W0105,R1705,R0901,R0902,R0903,R0904,R0911,R0912,R0913,R0914,
R0915,R0916,R1702,C0206,R0801"""
extension-pkg-whitelist="pydantic"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.black]
line-length = 100

[tool.mypy]
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["m3u8"]
ignore_missing_imports = true

[tool.poetry]
name = "apple-music-tools"
version = "0.1.0"
description = "A collection of tools for reverse engineering and understanding the DRM of Apple Music. For educational use only."
authors = ["Stephan Lensky <stephanl.public@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.scripts]
amt = "apple_music_tools.main:app"

[tool.poetry.dependencies]
python = "^3.9"
mitmproxy = "^7.0.4"
typer = "^0.4.0"
pydantic = "^1.9.0"
m3u8 = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"
pylint = "^2.11.1"
docformatter = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
